# Stokes_hp

./: .StokesProblem.cc.swo  .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CopyData.hh  ExactSolution.cc  ExactSolution.hh  ExactSolutionEx1.cc  ExactSolutionEx1.hh  ExactSolutionEx2.cc  ExactSolutionEx2.hh  ExactSolutionEx3.cc  ExactSolutionEx3.hh  ExactSolutionEx4.cc  ExactSolutionEx4.hh  ExactSolutionEx5.cc  ExactSolutionEx5.hh  Makefile  Parameters.cc  Parameters.hh  RightHandSide.cc  RightHandSide.hh  RightHandSideEx1.cc  RightHandSideEx1.hh  RightHandSideEx2.cc  RightHandSideEx2.hh  RightHandSideEx3.cc  RightHandSideEx3.hh  RightHandSideEx4.cc  RightHandSideEx4.hh  RightHandSideEx5.cc  RightHandSideEx5.hh  SchurComplement.cc  SchurComplement.hh  ScratchData.hh  Stokes  Stokes.cc  StokesProblem.cc  (+12 more)
Documents_Patch/: Copy_Stokes_June_6th.cc  Patch_constraints.cc  Untitled Document 1  get_patch.cc  get_patch.h
New-Code/: CopyData.hh  ExactSolutionEx1.cc  ExactSolutionEx1.hh  ExactSolutionEx2.cc  ExactSolutionEx2.hh  ExactSolutionEx3.cc  ExactSolutionEx3.hh  ExactSolutionEx4.cc  ExactSolutionEx4.hh  Parameters.cc  Parameters.hh  RightHandSideEx1.cc  RightHandSideEx1.hh  RightHandSideEx2.cc  RightHandSideEx3.cc  RightHandSideEx3.hh  RightHandSideEx4.cc  RightHandSideEx4.hh  Stokes.cc  StokesProblem.cc  StokesProblem.hh  plot_convergence.py  project.inp
OLD-Code-Modified-Ex2/: ExactSolution.cc  ExactSolution.hh  ExactSolutionEx1.cc  ExactSolutionEx1.hh  ExactSolutionEx2.cc  ExactSolutionEx2.hh  ExactSolutionEx3.cc  ExactSolutionEx3.hh  RightHandSide.cc  RightHandSide.hh  RightHandSideEx2.hh  SchurComplement.cc  SchurComplement.hh  Stokes.cc  StokesProblem.cc  StokesProblem.hh  hp-theta-075-p3-p2-unif-1-eddited-exsolu2  plot_convergence.py
Stokes_hp/: .cproject  .project
Test_Stokes_dim2/: .~lock.Stokes_template_dim.odt#  Stokes_31May.txt  Stokes_hp_Sep_26.txt  Stokes_template_dim.odt
Unif-ref/Ex-1/: out-uniform-h-ref-Ex1-p3-p2  uniform-h-ref-Ex1-p2-p1
Unif-ref/Ex-2/: uniform-h-ref-Ex2-p2-p1  uniform-h-ref-Ex2-p3-p2
hp-AFEM/Ex-2/hp-p3-p2-unif-1-theta-08/: Abort-message-hp-p3-p2-unifref-1
hp-AFEM/Ex-2/hp-p3-p2-unif-3-theta-08/: Output-Refinement Errors
tests/: triangulation_test.cc
